--- a/NFT PREVIEW CARD/index.html
+++ b/NFT PREVIEW CARD/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel='stylesheet' href="styles3.css">
+  <link rel='stylesheet' href="styles.css">
   <link rel="icon" href="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" type="image/icon type">
   <title>Frontend Mentor | NFT preview card component</title>
 
